Práctica 3/src/gramatica.output
State 13 conflicts: 9 shift/reduce
State 130 conflicts: 1 shift/reduce


Grammar

    0 $accept: Programa $end

    1 Programa: MAIN bloque

    2 bloque: BLOCK_START Declar_de_variables_locales Declar_de_subprogs Sentencias BLOCK_END

    3 Declar_de_subprogs: Declar_de_subprogs Declar_subprog
    4                   | %empty

    5 Declar_subprog: Cabecera_subprograma bloque

    6 Cabecera_subprograma: TYPE IDENTIFIER PARENT_START lista_de_parametros PARENT_END
    7                     | TYPE IDENTIFIER PARENT_START PARENT_END
    8                     | error

    9 Declar_de_variables_locales: BEGIN_LOCAL Variables_locales END_LOCAL
   10                            | %empty

   11 Variables_locales: Variables_locales Cuerpo_declar_variables
   12                  | Cuerpo_declar_variables

   13 Cuerpo_declar_variables: TYPE lista_variables COLON
   14                        | LIST_OF TYPE lista_variables COLON
   15                        | error
   16                        | TYPE error
   17                        | LIST_OF TYPE error

   18 lista_variables: lista_variables COMMA IDENTIFIER
   19                | IDENTIFIER
   20                | error

   21 lista_de_parametros: lista_de_parametros COMMA TYPE IDENTIFIER
   22                    | lista_de_parametros COMMA LIST_OF TYPE IDENTIFIER
   23                    | TYPE IDENTIFIER
   24                    | LIST_OF IDENTIFIER

   25 Sentencias: Sentencias Sentencia
   26           | Sentencia
   27           | %empty

   28 Sentencia: bloque
   29          | Sentencia_asignacion
   30          | Sentencia_if
   31          | Sentencia_while
   32          | Sentencia_for
   33          | Sentencia_entrada
   34          | Sentencia_salida
   35          | Sentencia_return
   36          | Sentencias_lista

   37 Sentencia_asignacion: IDENTIFIER ASSIGN expresion COLON

   38 Sentencia_if: IF PARENT_START expresion PARENT_END Sentencia
   39             | IF PARENT_START expresion PARENT_END Sentencia ELSE Sentencia

   40 Sentencia_while: WHILE PARENT_START expresion PARENT_END Sentencia

   41 Sentencia_for: FOR IDENTIFIER ASSIGN expresion TO expresion Sentencia

   42 Sentencia_entrada: INPUT lista_variables COLON

   43 Sentencia_salida: OUTPUT Lista_expresiones_o_cadena COLON

   44 Lista_expresiones_o_cadena: Lista_expresiones_o_cadena COMMA expresion
   45                           | Lista_expresiones_o_cadena COMMA STRING
   46                           | expresion
   47                           | STRING

   48 Sentencia_return: RETURN expresion COLON

   49 Sentencias_lista: OP_UNARY expresion COLON

   50 expresion: PARENT_START expresion PARENT_END
   51          | OP_UNARY expresion
   52          | expresion OP_BINARY expresion
   53          | expresion PLUS_MINUS expresion
   54          | expresion OP_TERNARY_1 expresion OP_TERNARY_2 expresion
   55          | IDENTIFIER
   56          | constante
   57          | funcion
   58          | error

   59 funcion: IDENTIFIER PARENT_START Lista_expresiones PARENT_END
   60        | IDENTIFIER PARENT_START PARENT_END

   61 Lista_expresiones: Lista_expresiones COMMA expresion
   62                  | expresion

   63 constante: constante_base
   64          | constante_lista

   65 constante_base: CONST_INT
   66               | CONST_FLOAT
   67               | CONST_BOOL
   68               | CONST_CHAR

   69 constante_lista: BRACKET_START constante_lista_int BRACKET_END
   70                | BRACKET_START constante_lista_float BRACKET_END
   71                | BRACKET_START constante_lista_bool BRACKET_END
   72                | BRACKET_START constante_lista_char BRACKET_END

   73 constante_lista_int: constante_lista_int COMMA CONST_INT
   74                    | CONST_INT

   75 constante_lista_float: constante_lista_float COMMA CONST_FLOAT
   76                      | CONST_FLOAT

   77 constante_lista_bool: constante_lista_bool COMMA CONST_BOOL
   78                     | CONST_BOOL

   79 constante_lista_char: constante_lista_char COMMA CONST_CHAR
   80                     | CONST_CHAR


Terminals, with rules where they appear

    $end (0) 0
    error (256) 8 15 16 17 20 58
    MAIN (258) 1
    BLOCK_START (259) 2
    BLOCK_END (260) 2
    PARENT_START (261) 6 7 38 39 40 50 59 60
    PARENT_END (262) 6 7 38 39 40 50 59 60
    BRACKET_START (263) 69 70 71 72
    BRACKET_END (264) 69 70 71 72
    COLON (265) 13 14 37 42 43 48 49
    COMMA (266) 18 21 22 44 45 61 73 75 77 79
    BEGIN_LOCAL (267) 9
    END_LOCAL (268) 9
    TYPE (269) 6 7 13 14 16 17 21 22 23
    LIST_OF (270) 14 17 22 24
    ASSIGN (271) 37 41
    IF (272) 38 39
    ELSE (273) 39
    WHILE (274) 40
    FOR (275) 41
    TO (276) 41
    INPUT (277) 42
    OUTPUT (278) 43
    RETURN (279) 48
    CONST_INT (280) 65 73 74
    CONST_FLOAT (281) 66 75 76
    CONST_BOOL (282) 67 77 78
    CONST_CHAR (283) 68 79 80
    STRING (284) 45 47
    IDENTIFIER (285) 6 7 18 19 21 22 23 24 37 41 55 59 60
    OP_UNARY (286) 49 51
    OP_BINARY (287) 52
    OP_TERNARY_1 (288) 54
    OP_TERNARY_2 (289) 54
    PLUS_MINUS (290) 53


Nonterminals, with rules where they appear

    $accept (36)
        on left: 0
    Programa (37)
        on left: 1
        on right: 0
    bloque (38)
        on left: 2
        on right: 1 5 28
    Declar_de_subprogs (39)
        on left: 3 4
        on right: 2 3
    Declar_subprog (40)
        on left: 5
        on right: 3
    Cabecera_subprograma (41)
        on left: 6 7 8
        on right: 5
    Declar_de_variables_locales (42)
        on left: 9 10
        on right: 2
    Variables_locales (43)
        on left: 11 12
        on right: 9 11
    Cuerpo_declar_variables (44)
        on left: 13 14 15 16 17
        on right: 11 12
    lista_variables (45)
        on left: 18 19 20
        on right: 13 14 18 42
    lista_de_parametros (46)
        on left: 21 22 23 24
        on right: 6 21 22
    Sentencias (47)
        on left: 25 26 27
        on right: 2 25
    Sentencia (48)
        on left: 28 29 30 31 32 33 34 35 36
        on right: 25 26 38 39 40 41
    Sentencia_asignacion (49)
        on left: 37
        on right: 29
    Sentencia_if (50)
        on left: 38 39
        on right: 30
    Sentencia_while (51)
        on left: 40
        on right: 31
    Sentencia_for (52)
        on left: 41
        on right: 32
    Sentencia_entrada (53)
        on left: 42
        on right: 33
    Sentencia_salida (54)
        on left: 43
        on right: 34
    Lista_expresiones_o_cadena (55)
        on left: 44 45 46 47
        on right: 43 44 45
    Sentencia_return (56)
        on left: 48
        on right: 35
    Sentencias_lista (57)
        on left: 49
        on right: 36
    expresion (58)
        on left: 50 51 52 53 54 55 56 57 58
        on right: 37 38 39 40 41 44 46 48 49 50 51 52 53 54 61 62
    funcion (59)
        on left: 59 60
        on right: 57
    Lista_expresiones (60)
        on left: 61 62
        on right: 59 61
    constante (61)
        on left: 63 64
        on right: 56
    constante_base (62)
        on left: 65 66 67 68
        on right: 63
    constante_lista (63)
        on left: 69 70 71 72
        on right: 64
    constante_lista_int (64)
        on left: 73 74
        on right: 69 73
    constante_lista_float (65)
        on left: 75 76
        on right: 70 75
    constante_lista_bool (66)
        on left: 77 78
        on right: 71 77
    constante_lista_char (67)
        on left: 79 80
        on right: 72 79


State 0

    0 $accept: . Programa $end

    MAIN  shift, and go to state 1

    Programa  go to state 2


State 1

    1 Programa: MAIN . bloque

    BLOCK_START  shift, and go to state 3

    bloque  go to state 4


State 2

    0 $accept: Programa . $end

    $end  shift, and go to state 5


State 3

    2 bloque: BLOCK_START . Declar_de_variables_locales Declar_de_subprogs Sentencias BLOCK_END

    BEGIN_LOCAL  shift, and go to state 6

    $default  reduce using rule 10 (Declar_de_variables_locales)

    Declar_de_variables_locales  go to state 7


State 4

    1 Programa: MAIN bloque .

    $default  reduce using rule 1 (Programa)


State 5

    0 $accept: Programa $end .

    $default  accept


State 6

    9 Declar_de_variables_locales: BEGIN_LOCAL . Variables_locales END_LOCAL

    error    shift, and go to state 8
    TYPE     shift, and go to state 9
    LIST_OF  shift, and go to state 10

    Variables_locales        go to state 11
    Cuerpo_declar_variables  go to state 12


State 7

    2 bloque: BLOCK_START Declar_de_variables_locales . Declar_de_subprogs Sentencias BLOCK_END

    $default  reduce using rule 4 (Declar_de_subprogs)

    Declar_de_subprogs  go to state 13


State 8

   15 Cuerpo_declar_variables: error .

    $default  reduce using rule 15 (Cuerpo_declar_variables)


State 9

   13 Cuerpo_declar_variables: TYPE . lista_variables COLON
   16                        | TYPE . error

    error       shift, and go to state 14
    IDENTIFIER  shift, and go to state 15

    lista_variables  go to state 16


State 10

   14 Cuerpo_declar_variables: LIST_OF . TYPE lista_variables COLON
   17                        | LIST_OF . TYPE error

    TYPE  shift, and go to state 17


State 11

    9 Declar_de_variables_locales: BEGIN_LOCAL Variables_locales . END_LOCAL
   11 Variables_locales: Variables_locales . Cuerpo_declar_variables

    error      shift, and go to state 8
    END_LOCAL  shift, and go to state 18
    TYPE       shift, and go to state 9
    LIST_OF    shift, and go to state 10

    Cuerpo_declar_variables  go to state 19


State 12

   12 Variables_locales: Cuerpo_declar_variables .

    $default  reduce using rule 12 (Variables_locales)


State 13

    2 bloque: BLOCK_START Declar_de_variables_locales Declar_de_subprogs . Sentencias BLOCK_END
    3 Declar_de_subprogs: Declar_de_subprogs . Declar_subprog

    error        shift, and go to state 20
    BLOCK_START  shift, and go to state 3
    TYPE         shift, and go to state 21
    IF           shift, and go to state 22
    WHILE        shift, and go to state 23
    FOR          shift, and go to state 24
    INPUT        shift, and go to state 25
    OUTPUT       shift, and go to state 26
    RETURN       shift, and go to state 27
    IDENTIFIER   shift, and go to state 28
    OP_UNARY     shift, and go to state 29

    BLOCK_START  [reduce using rule 27 (Sentencias)]
    BLOCK_END    reduce using rule 27 (Sentencias)
    IF           [reduce using rule 27 (Sentencias)]
    WHILE        [reduce using rule 27 (Sentencias)]
    FOR          [reduce using rule 27 (Sentencias)]
    INPUT        [reduce using rule 27 (Sentencias)]
    OUTPUT       [reduce using rule 27 (Sentencias)]
    RETURN       [reduce using rule 27 (Sentencias)]
    IDENTIFIER   [reduce using rule 27 (Sentencias)]
    OP_UNARY     [reduce using rule 27 (Sentencias)]

    bloque                go to state 30
    Declar_subprog        go to state 31
    Cabecera_subprograma  go to state 32
    Sentencias            go to state 33
    Sentencia             go to state 34
    Sentencia_asignacion  go to state 35
    Sentencia_if          go to state 36
    Sentencia_while       go to state 37
    Sentencia_for         go to state 38
    Sentencia_entrada     go to state 39
    Sentencia_salida      go to state 40
    Sentencia_return      go to state 41
    Sentencias_lista      go to state 42


State 14

   16 Cuerpo_declar_variables: TYPE error .
   20 lista_variables: error .

    COLON     reduce using rule 20 (lista_variables)
    COMMA     reduce using rule 20 (lista_variables)
    $default  reduce using rule 16 (Cuerpo_declar_variables)


State 15

   19 lista_variables: IDENTIFIER .

    $default  reduce using rule 19 (lista_variables)


State 16

   13 Cuerpo_declar_variables: TYPE lista_variables . COLON
   18 lista_variables: lista_variables . COMMA IDENTIFIER

    COLON  shift, and go to state 43
    COMMA  shift, and go to state 44


State 17

   14 Cuerpo_declar_variables: LIST_OF TYPE . lista_variables COLON
   17                        | LIST_OF TYPE . error

    error       shift, and go to state 45
    IDENTIFIER  shift, and go to state 15

    lista_variables  go to state 46


State 18

    9 Declar_de_variables_locales: BEGIN_LOCAL Variables_locales END_LOCAL .

    $default  reduce using rule 9 (Declar_de_variables_locales)


State 19

   11 Variables_locales: Variables_locales Cuerpo_declar_variables .

    $default  reduce using rule 11 (Variables_locales)


State 20

    8 Cabecera_subprograma: error .

    $default  reduce using rule 8 (Cabecera_subprograma)


State 21

    6 Cabecera_subprograma: TYPE . IDENTIFIER PARENT_START lista_de_parametros PARENT_END
    7                     | TYPE . IDENTIFIER PARENT_START PARENT_END

    IDENTIFIER  shift, and go to state 47


State 22

   38 Sentencia_if: IF . PARENT_START expresion PARENT_END Sentencia
   39             | IF . PARENT_START expresion PARENT_END Sentencia ELSE Sentencia

    PARENT_START  shift, and go to state 48


State 23

   40 Sentencia_while: WHILE . PARENT_START expresion PARENT_END Sentencia

    PARENT_START  shift, and go to state 49


State 24

   41 Sentencia_for: FOR . IDENTIFIER ASSIGN expresion TO expresion Sentencia

    IDENTIFIER  shift, and go to state 50


State 25

   42 Sentencia_entrada: INPUT . lista_variables COLON

    error       shift, and go to state 51
    IDENTIFIER  shift, and go to state 15

    lista_variables  go to state 52


State 26

   43 Sentencia_salida: OUTPUT . Lista_expresiones_o_cadena COLON

    error          shift, and go to state 53
    PARENT_START   shift, and go to state 54
    BRACKET_START  shift, and go to state 55
    CONST_INT      shift, and go to state 56
    CONST_FLOAT    shift, and go to state 57
    CONST_BOOL     shift, and go to state 58
    CONST_CHAR     shift, and go to state 59
    STRING         shift, and go to state 60
    IDENTIFIER     shift, and go to state 61
    OP_UNARY       shift, and go to state 62

    Lista_expresiones_o_cadena  go to state 63
    expresion                   go to state 64
    funcion                     go to state 65
    constante                   go to state 66
    constante_base              go to state 67
    constante_lista             go to state 68


State 27

   48 Sentencia_return: RETURN . expresion COLON

    error          shift, and go to state 53
    PARENT_START   shift, and go to state 54
    BRACKET_START  shift, and go to state 55
    CONST_INT      shift, and go to state 56
    CONST_FLOAT    shift, and go to state 57
    CONST_BOOL     shift, and go to state 58
    CONST_CHAR     shift, and go to state 59
    IDENTIFIER     shift, and go to state 61
    OP_UNARY       shift, and go to state 62

    expresion        go to state 69
    funcion          go to state 65
    constante        go to state 66
    constante_base   go to state 67
    constante_lista  go to state 68


State 28

   37 Sentencia_asignacion: IDENTIFIER . ASSIGN expresion COLON

    ASSIGN  shift, and go to state 70


State 29

   49 Sentencias_lista: OP_UNARY . expresion COLON

    error          shift, and go to state 53
    PARENT_START   shift, and go to state 54
    BRACKET_START  shift, and go to state 55
    CONST_INT      shift, and go to state 56
    CONST_FLOAT    shift, and go to state 57
    CONST_BOOL     shift, and go to state 58
    CONST_CHAR     shift, and go to state 59
    IDENTIFIER     shift, and go to state 61
    OP_UNARY       shift, and go to state 62

    expresion        go to state 71
    funcion          go to state 65
    constante        go to state 66
    constante_base   go to state 67
    constante_lista  go to state 68


State 30

   28 Sentencia: bloque .

    $default  reduce using rule 28 (Sentencia)


State 31

    3 Declar_de_subprogs: Declar_de_subprogs Declar_subprog .

    $default  reduce using rule 3 (Declar_de_subprogs)


State 32

    5 Declar_subprog: Cabecera_subprograma . bloque

    BLOCK_START  shift, and go to state 3

    bloque  go to state 72


State 33

    2 bloque: BLOCK_START Declar_de_variables_locales Declar_de_subprogs Sentencias . BLOCK_END
   25 Sentencias: Sentencias . Sentencia

    BLOCK_START  shift, and go to state 3
    BLOCK_END    shift, and go to state 73
    IF           shift, and go to state 22
    WHILE        shift, and go to state 23
    FOR          shift, and go to state 24
    INPUT        shift, and go to state 25
    OUTPUT       shift, and go to state 26
    RETURN       shift, and go to state 27
    IDENTIFIER   shift, and go to state 28
    OP_UNARY     shift, and go to state 29

    bloque                go to state 30
    Sentencia             go to state 74
    Sentencia_asignacion  go to state 35
    Sentencia_if          go to state 36
    Sentencia_while       go to state 37
    Sentencia_for         go to state 38
    Sentencia_entrada     go to state 39
    Sentencia_salida      go to state 40
    Sentencia_return      go to state 41
    Sentencias_lista      go to state 42


State 34

   26 Sentencias: Sentencia .

    $default  reduce using rule 26 (Sentencias)


State 35

   29 Sentencia: Sentencia_asignacion .

    $default  reduce using rule 29 (Sentencia)


State 36

   30 Sentencia: Sentencia_if .

    $default  reduce using rule 30 (Sentencia)


State 37

   31 Sentencia: Sentencia_while .

    $default  reduce using rule 31 (Sentencia)


State 38

   32 Sentencia: Sentencia_for .

    $default  reduce using rule 32 (Sentencia)


State 39

   33 Sentencia: Sentencia_entrada .

    $default  reduce using rule 33 (Sentencia)


State 40

   34 Sentencia: Sentencia_salida .

    $default  reduce using rule 34 (Sentencia)


State 41

   35 Sentencia: Sentencia_return .

    $default  reduce using rule 35 (Sentencia)


State 42

   36 Sentencia: Sentencias_lista .

    $default  reduce using rule 36 (Sentencia)


State 43

   13 Cuerpo_declar_variables: TYPE lista_variables COLON .

    $default  reduce using rule 13 (Cuerpo_declar_variables)


State 44

   18 lista_variables: lista_variables COMMA . IDENTIFIER

    IDENTIFIER  shift, and go to state 75


State 45

   17 Cuerpo_declar_variables: LIST_OF TYPE error .
   20 lista_variables: error .

    COLON     reduce using rule 20 (lista_variables)
    COMMA     reduce using rule 20 (lista_variables)
    $default  reduce using rule 17 (Cuerpo_declar_variables)


State 46

   14 Cuerpo_declar_variables: LIST_OF TYPE lista_variables . COLON
   18 lista_variables: lista_variables . COMMA IDENTIFIER

    COLON  shift, and go to state 76
    COMMA  shift, and go to state 44


State 47

    6 Cabecera_subprograma: TYPE IDENTIFIER . PARENT_START lista_de_parametros PARENT_END
    7                     | TYPE IDENTIFIER . PARENT_START PARENT_END

    PARENT_START  shift, and go to state 77


State 48

   38 Sentencia_if: IF PARENT_START . expresion PARENT_END Sentencia
   39             | IF PARENT_START . expresion PARENT_END Sentencia ELSE Sentencia

    error          shift, and go to state 53
    PARENT_START   shift, and go to state 54
    BRACKET_START  shift, and go to state 55
    CONST_INT      shift, and go to state 56
    CONST_FLOAT    shift, and go to state 57
    CONST_BOOL     shift, and go to state 58
    CONST_CHAR     shift, and go to state 59
    IDENTIFIER     shift, and go to state 61
    OP_UNARY       shift, and go to state 62

    expresion        go to state 78
    funcion          go to state 65
    constante        go to state 66
    constante_base   go to state 67
    constante_lista  go to state 68


State 49

   40 Sentencia_while: WHILE PARENT_START . expresion PARENT_END Sentencia

    error          shift, and go to state 53
    PARENT_START   shift, and go to state 54
    BRACKET_START  shift, and go to state 55
    CONST_INT      shift, and go to state 56
    CONST_FLOAT    shift, and go to state 57
    CONST_BOOL     shift, and go to state 58
    CONST_CHAR     shift, and go to state 59
    IDENTIFIER     shift, and go to state 61
    OP_UNARY       shift, and go to state 62

    expresion        go to state 79
    funcion          go to state 65
    constante        go to state 66
    constante_base   go to state 67
    constante_lista  go to state 68


State 50

   41 Sentencia_for: FOR IDENTIFIER . ASSIGN expresion TO expresion Sentencia

    ASSIGN  shift, and go to state 80


State 51

   20 lista_variables: error .

    $default  reduce using rule 20 (lista_variables)


State 52

   18 lista_variables: lista_variables . COMMA IDENTIFIER
   42 Sentencia_entrada: INPUT lista_variables . COLON

    COLON  shift, and go to state 81
    COMMA  shift, and go to state 44


State 53

   58 expresion: error .

    $default  reduce using rule 58 (expresion)


State 54

   50 expresion: PARENT_START . expresion PARENT_END

    error          shift, and go to state 53
    PARENT_START   shift, and go to state 54
    BRACKET_START  shift, and go to state 55
    CONST_INT      shift, and go to state 56
    CONST_FLOAT    shift, and go to state 57
    CONST_BOOL     shift, and go to state 58
    CONST_CHAR     shift, and go to state 59
    IDENTIFIER     shift, and go to state 61
    OP_UNARY       shift, and go to state 62

    expresion        go to state 82
    funcion          go to state 65
    constante        go to state 66
    constante_base   go to state 67
    constante_lista  go to state 68


State 55

   69 constante_lista: BRACKET_START . constante_lista_int BRACKET_END
   70                | BRACKET_START . constante_lista_float BRACKET_END
   71                | BRACKET_START . constante_lista_bool BRACKET_END
   72                | BRACKET_START . constante_lista_char BRACKET_END

    CONST_INT    shift, and go to state 83
    CONST_FLOAT  shift, and go to state 84
    CONST_BOOL   shift, and go to state 85
    CONST_CHAR   shift, and go to state 86

    constante_lista_int    go to state 87
    constante_lista_float  go to state 88
    constante_lista_bool   go to state 89
    constante_lista_char   go to state 90


State 56

   65 constante_base: CONST_INT .

    $default  reduce using rule 65 (constante_base)


State 57

   66 constante_base: CONST_FLOAT .

    $default  reduce using rule 66 (constante_base)


State 58

   67 constante_base: CONST_BOOL .

    $default  reduce using rule 67 (constante_base)


State 59

   68 constante_base: CONST_CHAR .

    $default  reduce using rule 68 (constante_base)


State 60

   47 Lista_expresiones_o_cadena: STRING .

    $default  reduce using rule 47 (Lista_expresiones_o_cadena)


State 61

   55 expresion: IDENTIFIER .
   59 funcion: IDENTIFIER . PARENT_START Lista_expresiones PARENT_END
   60        | IDENTIFIER . PARENT_START PARENT_END

    PARENT_START  shift, and go to state 91

    $default  reduce using rule 55 (expresion)


State 62

   51 expresion: OP_UNARY . expresion

    error          shift, and go to state 53
    PARENT_START   shift, and go to state 54
    BRACKET_START  shift, and go to state 55
    CONST_INT      shift, and go to state 56
    CONST_FLOAT    shift, and go to state 57
    CONST_BOOL     shift, and go to state 58
    CONST_CHAR     shift, and go to state 59
    IDENTIFIER     shift, and go to state 61
    OP_UNARY       shift, and go to state 62

    expresion        go to state 92
    funcion          go to state 65
    constante        go to state 66
    constante_base   go to state 67
    constante_lista  go to state 68


State 63

   43 Sentencia_salida: OUTPUT Lista_expresiones_o_cadena . COLON
   44 Lista_expresiones_o_cadena: Lista_expresiones_o_cadena . COMMA expresion
   45                           | Lista_expresiones_o_cadena . COMMA STRING

    COLON  shift, and go to state 93
    COMMA  shift, and go to state 94


State 64

   46 Lista_expresiones_o_cadena: expresion .
   52 expresion: expresion . OP_BINARY expresion
   53          | expresion . PLUS_MINUS expresion
   54          | expresion . OP_TERNARY_1 expresion OP_TERNARY_2 expresion

    OP_BINARY     shift, and go to state 95
    OP_TERNARY_1  shift, and go to state 96
    PLUS_MINUS    shift, and go to state 97

    $default  reduce using rule 46 (Lista_expresiones_o_cadena)


State 65

   57 expresion: funcion .

    $default  reduce using rule 57 (expresion)


State 66

   56 expresion: constante .

    $default  reduce using rule 56 (expresion)


State 67

   63 constante: constante_base .

    $default  reduce using rule 63 (constante)


State 68

   64 constante: constante_lista .

    $default  reduce using rule 64 (constante)


State 69

   48 Sentencia_return: RETURN expresion . COLON
   52 expresion: expresion . OP_BINARY expresion
   53          | expresion . PLUS_MINUS expresion
   54          | expresion . OP_TERNARY_1 expresion OP_TERNARY_2 expresion

    COLON         shift, and go to state 98
    OP_BINARY     shift, and go to state 95
    OP_TERNARY_1  shift, and go to state 96
    PLUS_MINUS    shift, and go to state 97


State 70

   37 Sentencia_asignacion: IDENTIFIER ASSIGN . expresion COLON

    error          shift, and go to state 53
    PARENT_START   shift, and go to state 54
    BRACKET_START  shift, and go to state 55
    CONST_INT      shift, and go to state 56
    CONST_FLOAT    shift, and go to state 57
    CONST_BOOL     shift, and go to state 58
    CONST_CHAR     shift, and go to state 59
    IDENTIFIER     shift, and go to state 61
    OP_UNARY       shift, and go to state 62

    expresion        go to state 99
    funcion          go to state 65
    constante        go to state 66
    constante_base   go to state 67
    constante_lista  go to state 68


State 71

   49 Sentencias_lista: OP_UNARY expresion . COLON
   52 expresion: expresion . OP_BINARY expresion
   53          | expresion . PLUS_MINUS expresion
   54          | expresion . OP_TERNARY_1 expresion OP_TERNARY_2 expresion

    COLON         shift, and go to state 100
    OP_BINARY     shift, and go to state 95
    OP_TERNARY_1  shift, and go to state 96
    PLUS_MINUS    shift, and go to state 97


State 72

    5 Declar_subprog: Cabecera_subprograma bloque .

    $default  reduce using rule 5 (Declar_subprog)


State 73

    2 bloque: BLOCK_START Declar_de_variables_locales Declar_de_subprogs Sentencias BLOCK_END .

    $default  reduce using rule 2 (bloque)


State 74

   25 Sentencias: Sentencias Sentencia .

    $default  reduce using rule 25 (Sentencias)


State 75

   18 lista_variables: lista_variables COMMA IDENTIFIER .

    $default  reduce using rule 18 (lista_variables)


State 76

   14 Cuerpo_declar_variables: LIST_OF TYPE lista_variables COLON .

    $default  reduce using rule 14 (Cuerpo_declar_variables)


State 77

    6 Cabecera_subprograma: TYPE IDENTIFIER PARENT_START . lista_de_parametros PARENT_END
    7                     | TYPE IDENTIFIER PARENT_START . PARENT_END

    PARENT_END  shift, and go to state 101
    TYPE        shift, and go to state 102
    LIST_OF     shift, and go to state 103

    lista_de_parametros  go to state 104


State 78

   38 Sentencia_if: IF PARENT_START expresion . PARENT_END Sentencia
   39             | IF PARENT_START expresion . PARENT_END Sentencia ELSE Sentencia
   52 expresion: expresion . OP_BINARY expresion
   53          | expresion . PLUS_MINUS expresion
   54          | expresion . OP_TERNARY_1 expresion OP_TERNARY_2 expresion

    PARENT_END    shift, and go to state 105
    OP_BINARY     shift, and go to state 95
    OP_TERNARY_1  shift, and go to state 96
    PLUS_MINUS    shift, and go to state 97


State 79

   40 Sentencia_while: WHILE PARENT_START expresion . PARENT_END Sentencia
   52 expresion: expresion . OP_BINARY expresion
   53          | expresion . PLUS_MINUS expresion
   54          | expresion . OP_TERNARY_1 expresion OP_TERNARY_2 expresion

    PARENT_END    shift, and go to state 106
    OP_BINARY     shift, and go to state 95
    OP_TERNARY_1  shift, and go to state 96
    PLUS_MINUS    shift, and go to state 97


State 80

   41 Sentencia_for: FOR IDENTIFIER ASSIGN . expresion TO expresion Sentencia

    error          shift, and go to state 53
    PARENT_START   shift, and go to state 54
    BRACKET_START  shift, and go to state 55
    CONST_INT      shift, and go to state 56
    CONST_FLOAT    shift, and go to state 57
    CONST_BOOL     shift, and go to state 58
    CONST_CHAR     shift, and go to state 59
    IDENTIFIER     shift, and go to state 61
    OP_UNARY       shift, and go to state 62

    expresion        go to state 107
    funcion          go to state 65
    constante        go to state 66
    constante_base   go to state 67
    constante_lista  go to state 68


State 81
